--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 50;
+  z-index: 3;
 
   background: rgba(0, 0, 0, 0.35);
   backdrop-filter: var(--blur-bg);
